fix: column text align

--- a/src/components/Token/TokenTable.module.css
+++ b/src/components/Token/TokenTable.module.css
@@ -9,6 +9,8 @@
   font-weight: normal;
   padding: 13px;
   font-size: 12px;
+  display: flex;
+  align-items: center;
 }
 
 .table td {
